# BrewMingle

./: pyproject.toml
settings/: db.sqlite3
settings/beverages/: admin.py  models.py  seializers.py  urls.py  views.py
settings/beverages/migrations/: 0001_initial.py  0002_coffee_stars_alter_coffee_description_and_more.py
settings/settings/: settings.py  urls.py
